# LosChess

./: .gitignore  install.md
client-qt/: CMakeUserPresets.json
client-qt/src/: constants.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  style.h  ui_LoginDialog.h  ui_mainwindow.h
client-qt/src/common/: AuthState.h  logger.h
client-qt/src/model/: auth_request.pb.cc  auth_response.pb.cc  auth_response.pb.h
client-qt/src/net/: BaseRequest.h  EmailRequest.cpp  EmailRequest.h  LoginRequest.cpp  LoginRequest.h  NetManage.h  RegisterRequest.cpp  RegisterRequest.h
client-qt/src/ui/LoginDialog/: LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  LoginDialog_style.h
protofile/: auth_request.pb.h  auth_request.proto  auth_response.pb.h  auth_response.proto  test.txt
server-rust/: .env  Cargo.toml  build.rs  local.db
server-rust/migrations/: 20260205045410_init_db.sql
server-rust/src/: lib.rs  main.rs
server-rust/src/controller/: auth.rs
server-rust/src/net/: serve.rs
server-rust/src/service/: em_service.rs  lo_service.rs  mod.rs  re_service.rs  redis_service.rs
server-rust/src/tool/: jwt_tool.rs  mod.rs  rand_str.rs
