[package]
name = "server-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
bytes = "1.11.1"
prost = "0.14.3"
tokio = {version = "1.49.0",features = ["full"]}
tower-http = {version = "0.6.8",features = ["cors"]}
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros"] }
bb8-redis = "0.26.0"
bb8 = "0.9.1"
anyhow = "1.0.101"
rand = "0.9.2"
bcrypt = "0.18.0"
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }
serde = "1.0.228"
dotenvy = "0.15.7"
lettre = {version = "0.11.19",features = ["tokio1-native-tls", "hostname", "builder"]} 
redis = "1.0.3"
[build-dependencies]
prost-build = "0.14.3"
